* Bug Fixing 2686627 [ERDesignerNG]  'NOT NULL' ist not generated
* Bug Fixing 2675535 [ERDesignerNG] Not possible to edit relations in subject area
* Bug Fixing 2292224 [ERDesignerNG] Comments cannot be added to Subject Areas
* Bug Fixing 2735418 [ERDesignerNG] Table content is clipped
* Bug Fixing 2735413 [ERDesignerNG] German umlauts corrupted
* Implemented FR 2581994 [ERDesignerNG] Support for function based indexes
* Implemented FR 1905364 [ERDesignerNG] Add support for views ( early alpha )
* Implemented FR 2675641 [ERDesignerNG] ESC Default buttons for dialogs
* Implemented FR 2686903 [ERDesignerNG] Store main window size
* Implemented FR 2675574 [ERDesignerNG] Resizable dialog windows
* Implemented FR 1889667 [ERDesignerNG] Allow editing of Edge Waypoints ( right click + ALT )
* Implemented FR 2686546 [ERDesignerNG] Save vs. Save As
* Implemented FR 2169348 [ERDesignerNG] Allow switching of database/dialect to generated mult. ddls
* Implemented FR 2690714 [ERDesignerNG] Add relation constraint RESTRICT
* Implemented FR 2714523 [ERDesignerNG] prompt for password before db operation
* Implemented FR 2504332 [ERDesignerNG] better comments display
* Implemented FR 2711884 [ERDesignerNG] Add support for hidden relationships
* Implemented FR 2686547 [ERDesignerNG] Export to HTML
* Implemented FR 2220184 [ERDesignerNG] Make documentation available as JavaHelp
* Implemented FR 2690710 [ERDesignerNG] Start script should switch to installation directory
* Implemented FR 2725418 [ERDesignerNG] Add support for custom types

Release 2.0.1

* Bug Fixing 2836568 [ERDesignerNG] Mogwai ERD Screen Layout
* Bug Fixing 2837689 [ERDesignerNG] DDL codes can't be copied to clipboard

Release 2.0.2

* Bug Fixing 2861394 [ERDesignerNG] Convert Datamodel Ignores Data Type Changes
* Bug Fixing 2836980 [ERDesignerNG] error onmultiple fields selection on entities
* Bug Fixing 2858806 [ERDesignerNG] Subject area positioning / deletion issues